# kon

./: AGENTS.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
agents/: Azusa-challenge.md  Azusa.md  Jun.md  Mio.md  Mugi.md  Nodoka.md  Ritsu.md  Sawako.md  Yui.md
commands/: address-comments.md  ask.md  begin.md  caveman.md  debug.md  describe-issue.md  design.md  finish.md  gc.md  go.md  hunt.md  quick.md  research.md  retro.md  review-pr.md  review.md  summarize.md  team.md  todo.md  understand-codebase.md
hooks/: _begin_log.py  _context_profile.py  _dashboard_autostart.py  _git_exclude.py  _hook_io.py  _kon_paths.py  _orchestrator_model.py  _retry_log.py  _review_artifact.py  _session_paths.py  _token_estimate.py  _transcript_text.py  _workspace.py  ensure_project_dir.py  hooks.json  init_kon_session.py  log_begin_prompt.py  log_begin_response.py  no_git_write.py  on_pre_compact.py  on_subagent_stop.py  record_orchestrator_model.py  repo_detect.py  start_dashboard.py  teammate_quality_check.py  verify_completion.py
scripts/: bootstrap_memory.sh  build_understand_codebase.py  dashboard.html  dashboard.py  generate_claude_commands.py  install_cursor_hooks.sh  install_hooks.sh  kon_session.py  kon_todo.py  pre-commit  pre-push  resolve_kon_root.sh  ruff_autofix.sh  setup_claude_code.sh  setup_codex.sh  setup_cursor.sh
templates/: bug-report.md  understand-guide.md  understand-study.json
tests/: conftest.py  test_build_understand_codebase.py  test_dashboard.py  test_dashboard_autostart.py  test_hooks.py  (+6 more)
(+56 files in other folders)
