[project]
name = "kon"
version = "0.1.0"
description = "K-On! Ho-kago Tea Time driven general-purpose dev agent flow"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/dashboard.py" = ["E501"]
